Tweak header nav and command footer styles

--- a/angular/projects/app/src/app/events/list-events.component.html
+++ b/angular/projects/app/src/app/events/list-events.component.html
@@ -68,4 +68,7 @@
       </shared-list>
     </table>
   </div>
+  <shared-command-footer>
+    <button type="button" tabindex="0" class="btn btn--primary">+ New Event</button>
+  </shared-command-footer>
 </main>
