--- a/angular/projects/app/src/app/events/list-events.component.scss
+++ b/angular/projects/app/src/app/events/list-events.component.scss
@@ -1,5 +1,9 @@
 @import '../../../../design/src/styles/common';
 
+.nav__link {
+  min-width: 120px;
+}
+
 .incident {
   display: flex;
   margin: 0 auto;
