--- a/angular/projects/design/src/app/navs.component.html
+++ b/angular/projects/design/src/app/navs.component.html
@@ -6,3 +6,10 @@
     <li class="nav__item"><a class="nav__link" href="/design/navs/#">Link</a></li>
   </ul>
 </section>
+<section style="display: flex; flex-direction: row">
+  <ul class="nav" style="width: 50%">
+    <li class="nav__item"><a class="nav__link nav__link--active" href="/design/navs/#">Current</a></li>
+    <li class="nav__item"><a class="nav__link" href="/design/navs/#">Upcoming</a></li>
+    <li class="nav__item"><a class="nav__link" href="/design/navs/#">Past</a></li>
+  </ul>
+</section>
