--- a/angular/projects/design/src/app/headers.component.html
+++ b/angular/projects/design/src/app/headers.component.html
@@ -1,7 +1,10 @@
 <h1>Headers</h1>
-<section>
-  <shared-welcome-header [user]="user"></shared-welcome-header>
-</section>
-<shared-command-footer>
-  <h4>Hello from the command footer.</h4>
-</shared-command-footer>
+<div style="background-color: gray; height: 100vh">
+  <section>
+    <shared-welcome-header [user]="user"></shared-welcome-header>
+  </section>
+  <shared-command-footer>
+    <button class="btn btn--primary">Primary</button>
+    <button class="btn btn--secondary">Secondary</button>
+  </shared-command-footer>
+</div>
