--- a/angular/projects/design/src/styles/_headers.scss
+++ b/angular/projects/design/src/styles/_headers.scss
@@ -1,7 +1,9 @@
 .command-footer {
+  background-color: white;
+  box-shadow: $shadow-40-40;
   bottom: 0;
   left: 0;
-  padding-bottom: 1.5rem;
+  padding: 1.5rem 0;
   position: fixed;
   right: 0;
 }
@@ -14,11 +16,7 @@
 .command-footer__content {
   display: flex;
   flex-direction: row-reverse;
-  margin: 0 -$grid-gutter-width / 2;
-
-  .btn {
-    margin: 0 $grid-gutter-width / 2;
-  }
+  gap: $grid-gutter-width;
 }
 
 .command-footer + .portrait-container,
@@ -28,17 +26,21 @@ shared-command-footer + .portrait-container {
 
 $min-command-footer-portrait-width: $portrait-width + 2 * (13.75rem + 2 * $grid-gutter-width);
 @media (min-width: $min-command-footer-portrait-width) {
+  .command-footer {
+    background-color: transparent;
+    box-shadow: none;
+  }
+
   .command-footer__content {
     bottom: 0;
     flex-direction: column;
     left: 100%;
-    margin: 0 grid-gutter-width;
+    padding: 0 $grid-gutter-width;
     position: absolute;
-    width: 13.75rem;
+    width: 15.25rem;
 
     .btn {
       align-self: stretch;
-      margin: $grid-gutter-width / 2 0;
     }
   }
 }
