--- a/angular/projects/design/src/styles/_navs.scss
+++ b/angular/projects/design/src/styles/_navs.scss
@@ -6,8 +6,7 @@
 }
 
 .nav__item {
-  flex-basis: 1;
-  flex-grow: 1;
+  flex: 1 0 0;
   overflow: hidden;
   border: 0.125rem solid $brand-primary-500;
 
