--- a/angular/projects/design/src/app/headers.component.html
+++ b/angular/projects/design/src/app/headers.component.html
@@ -3,6 +3,13 @@
   <section>
     <shared-welcome-header [user]="user"></shared-welcome-header>
   </section>
+  <section>
+    <shared-command-header>
+      <a class="command-header__plain">Cancel</a>
+      <h3 class="command-header__title">Name of Screen</h3>
+      <a class="command-header__primary">Save</a>
+    </shared-command-header>
+  </section>
   <shared-command-footer>
     <button class="btn btn--primary">Primary</button>
     <button class="btn btn--secondary">Secondary</button>
