--- a/angular/projects/shared/src/lib/components/fields/search-city-field.component.html
+++ b/angular/projects/shared/src/lib/components/fields/search-city-field.component.html
@@ -1,5 +1,6 @@
 <shared-search-field
   #instance
+  autocomplete="off"
   [searchHandler]="searchHandler"
   [resultFormatter]="resultFormatter"
   [inputFormatter]="inputFormatter"
