--- a/angular/projects/shared/src/lib/components/modal.component.html
+++ b/angular/projects/shared/src/lib/components/modal.component.html
@@ -6,7 +6,7 @@
     <ng-content select=".modal-title"></ng-content>
   </div>
   <ng-content select=".modal-body"></ng-content>
-  <fieldset [disabled]="disabled">
+  <fieldset *ngIf="dismissLabel || dangerLabel || confirmLabel" [disabled]="disabled">
     <div class="modal-footer">
       <ng-content select=".modal-footer"></ng-content>
       <div>
