--- a/angular/projects/app/src/app/events/list-events.component.scss
+++ b/angular/projects/app/src/app/events/list-events.component.scss
@@ -4,7 +4,7 @@
   min-width: 120px;
 }
 
-.incident {
+.event {
   display: flex;
   margin: 0 auto;
   max-width: map-get($container-max-widths, 'lg');
@@ -15,33 +15,33 @@
   }
 }
 
-.incident__number {
+.event__name {
   @include h2-bold;
   color: $brand-primary-600;
   width: 33%;
 }
 
-.incident__address {
+.event__address {
   width: 34%;
 }
 
-.incident__date {
+.event__date {
   width: 33%;
 }
 
-.incident__time {
+.event__time {
   text-align: right;
   width: 5rem;
   line-height: 3rem;
 }
 
-.incident--mci {
+.event--mci {
   background-color: $brand-secondary-300;
   &:hover {
     background-color: $brand-secondary-400;
   }
 
-  .incident__number {
+  .event__number {
     color: $brand-secondary-500;
   }
 
