--- a/angular/projects/app/src/app/events/list-events.component.scss
+++ b/angular/projects/app/src/app/events/list-events.component.scss
@@ -8,47 +8,23 @@
   display: flex;
   margin: 0 auto;
   max-width: map-get($container-max-widths, 'lg');
-
-  .chip {
-    position: relative;
-    top: -3px;
-  }
 }
 
 .event__name {
-  @include h2-bold;
   color: $brand-primary-600;
-  width: 33%;
+  width: 35%;
 }
 
-.event__address {
-  width: 34%;
+.event__venue {
+  width: 35%;
 }
 
 .event__date {
-  width: 33%;
+  width: 20%;
 }
 
 .event__time {
-  text-align: right;
-  width: 5rem;
-  line-height: 3rem;
-}
-
-.event--mci {
-  background-color: $brand-secondary-300;
-  &:hover {
-    background-color: $brand-secondary-400;
-  }
-
-  .event__number {
-    color: $brand-secondary-500;
-  }
-
-  .chip {
-    border-color: $brand-secondary-500;
-    background-color: $brand-secondary-500;
-  }
+  width: 10%;
 }
 
 shared-command-header ::ng-deep {
