--- a/angular/projects/design/src/styles/_forms.scss
+++ b/angular/projects/design/src/styles/_forms.scss
@@ -120,6 +120,23 @@ form {
 
 .form-field__content {
   padding: 0.375rem 0.875rem;
+  display: flex;
+  flex-direction: row;
+  *:first-child {
+    flex-grow: 1;
+  }
+
+  .form-field {
+    border: 0;
+    input {
+      margin-left: 0;
+      margin-right: 0;
+    }
+    &:focus-within {
+      border: 0;
+      box-shadow: none;
+    }
+  }
 }
 
 .form-field--nonempty {
@@ -316,6 +333,7 @@ select:disabled {
   position: relative;
   padding: 0.375rem 0.875rem;
   color: $base-800;
+  text-align: left;
 
   & + .form-field__item {
     border-top: 2px solid $brand-primary-300;
