Show a message when no facilities

--- a/angular/projects/app/src/app/events/edit-event.component.html
+++ b/angular/projects/app/src/app/events/edit-event.component.html
@@ -57,6 +57,9 @@
               <div *ngFor="let facility of record.venue?.facilities" class="form-field__item" (click)="onClickFacility(facility)">
                 {{ facility.name }} <span *ngIf="facility.inventory">({{ facility.inventory.join(', ') }})</span>
               </div>
+              <div *ngIf="!record.venue?.facilities?.length" class="form-field__item">
+                <span class="text-muted">No medical facilities</span>
+              </div>
             </div>
           </div>
           <button class="btn btn--sm btn--primary" (click)="newFacilityModal.show()">Add</button>
