--- a/angular/projects/app/src/app/events/edit-event.component.html
+++ b/angular/projects/app/src/app/events/edit-event.component.html
@@ -54,7 +54,10 @@
           <label class="mb-2">Venue Medical Facilities</label>
           <div class="form-field form-field--noclear mb-2">
             <div class="form-field__items">
-              <div *ngFor="let facility of record.venue?.facilities" class="form-field__item" (click)="onClickFacility(facility)">
+              <div
+                *ngFor="let facility of record.venue?.facilities"
+                class="form-field__item clickable hoverable"
+                (click)="onClickFacility(facility)">
                 {{ facility.name }} <span *ngIf="facility.inventory">({{ facility.inventory.join(', ') }})</span>
               </div>
               <div *ngIf="!record.venue?.facilities?.length" class="form-field__item">
