--- a/angular/projects/design/src/styles/_forms.scss
+++ b/angular/projects/design/src/styles/_forms.scss
@@ -327,9 +327,22 @@ select:disabled {
   }
 }
 
+.form-field__items {
+  & > *:first-child {
+    border-top-left-radius: 0.5rem;
+    border-top-right-radius: 0.5rem;
+  }
+
+  & > *:last-child {
+    border-bottom-left-radius: 0.5rem;
+    border-bottom-right-radius: 0.5rem;
+  }
+}
+
 .form-field__item {
   @include h3-semibold;
 
+  overflow: hidden;
   position: relative;
   padding: 0.375rem 0.875rem;
   color: $base-800;
