--- a/angular/projects/design/src/styles/_headers.scss
+++ b/angular/projects/design/src/styles/_headers.scss
@@ -159,6 +159,7 @@ shared-command-header ~ main {
   cursor: default;
   flex: 1 0 0;
   margin-bottom: 0;
+  text-align: center;
 }
 
 .command-header__plain {
