Center empty message

--- a/angular/projects/app/src/app/events/list-events.component.html
+++ b/angular/projects/app/src/app/events/list-events.component.html
@@ -45,7 +45,7 @@
         </ng-template>
         <ng-template #empty>
           <tr>
-            <th>No events yet.</th>
+            <th class="text-center">No events yet.</th>
           </tr>
         </ng-template>
       </shared-list>
