[Closes #474] Fix Event form

--- a/angular/projects/app/src/app/events/event-form.component.html
+++ b/angular/projects/app/src/app/events/event-form.component.html
@@ -40,6 +40,7 @@
       id="venueId"
       label="Venue"
       objectApiPath="venues"
+      [searchHandler]="searchHandler"
       [source]="record"
       [target]="record"
       [error]="error"></shared-object-field>
